# fp-homework

./: .gitignore  README.md  stack.yaml
hw0/: README.md  hw0.cabal
hw0/src/: Task1.hs  Task2.hs  Task3.hs  Task4.hs  Task5.hs  Task6.hs  Task7.hs
hw1/: README.md  hw1.cabal
hw1/src/: Block1.hs  Block2.hs  Block3.hs  Block4.hs  Block5.hs
hw2/: README.md  hw2.cabal
hw2/app/: Main.hs
hw2/src/: Block1.hs  Block2.hs  Block2_1.hs  Block3.hs
hw2/test/: Spec.hs
hw2/test/Test/: Block1.hs  Block2.hs  Block3.hs
hw3/: README.md  hw3.cabal
hw3/src/: ShGrammar.hs  ShInterpreter.hs  ShParser.hs
hw4/: LICENSE  README.md  hw4.cabal
hw4/bench/: MainBenchSuite.hs
hw4/bench/Bench/: CHT.hs  Gauss.hs  Geometry.hs  Multiply.hs
hw4/src/: CHT.hs  Gauss.hs  Geometry.hs  Multiply.hs  Util.hs
hw4/test/: Spec.hs
hw4/test/Test/: CHT.hs
