name:                hw1
version:             0.1.0.0
synopsis:            Synopsis for task 1
description:         Task 1 for FP ITMO course

homepage:            https://github.com/S0vk4/fp-homework/tree/master/hw1#readme
license:             MIT
license-file:        LICENSE
author:              Eugene Nefedov
maintainer:          nefedov0evgeniy@gmail.com
copyright:           2019 Eugene Nefedov

category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.0.1

library
  hs-source-dirs:      src
  exposed-modules:     Block1 Block2 Block3 Block4 Block5
  ghc-options:         -Wall
  build-depends:       base >= 4.9 && < 5, random
  default-language:    Haskell2010
